# swin

./: .gitignore  Cargo.toml  Makefile.ci.toml  Makefile.contract.toml  Makefile.local.toml  Makefile.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
contract/: Cargo.toml
contract/src/: events.rs  ft_core.rs  ft_metadata.rs  internal.rs  lib.rs  storage.rs
contract/tests/: test_basics.rs
doc/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/doc/contract/: all.html  fn.add.html  index.html
doc/doc/core/: all.html  fn.main.html  index.html
doc/doc/domain/: all.html  fn.add.html  index.html
doc/doc/search.desc/contract/: contract-desc-0-.js
doc/doc/search.desc/core/: core-desc-0-.js
doc/doc/search.desc/domain/: domain-desc-0-.js
doc/doc/src/contract/: lib.rs.html
doc/doc/src/core/: main.rs.html
doc/doc/src/domain/: lib.rs.html
